--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,8 @@
 }
 
 .button {
-  background: #ff4931;
+  background: #6ac174;
+  color: white;
   border-radius: 50%;
   width: 64px;
   height: 64px;
